--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -151,19 +151,33 @@ To navigate in a complex social world, individual has learnt to prioritize valua
 
 \# Introduction
 
-Perceptual decision-making is an important window for understanding the cognition (Shadlen \& Kiani, 2013).
+Morality is the central of social life, regardless of the culture. It's so entrenched in the social life that one basic dimension of social perception is morality, i.e., whether a person is moral good or not. Also, morality is the most defining trait of a person. In the same vein, to succeed navigate in the social world, one has to consistently maintain a good moral reputation, i.e., moral self-image (to self), moral character (to others), because moral character of a person may determine whether she/he can find potential cooperators in the social world. This motivation may have strong influence on individual's behavioral and mind. For example, across three social domains, morality, social competence, and competence, people have the strongest self-enhancement effect in morality domain. Previously studies revealed that people can maintain their moral self image even after their own unethical behaviors (e.g., cheating). Also, when asked how likely they will do ethical or unethical things, most participants showed the tendency of less likely to do unethical things {[}{]}. Thus, the importance of morality in social life and most of adults are socialized individual, moral character is an dispensable part of their identity, the one that one need to maintain, even through self-deception.
 
-The role of perception in social cognition has been largely ignored, but accumulating evidence revealed that perception provides rich information about our social cognition (Stolier \& Freeman, 2016; Xiao, Coppin, \& Bavel, 2016).
+From the information processing perspective, it is interesting, then, how moral self-image related information were processed by individuals? One might expect that the self-related moral information is more likely to be processed, elaborated, and perserved, so that the available information to the participant are more likely to consistent with one's expectation: good self! Indeed, recent studies found that memories retrieved are biased by their relevance to moral self-image and that this effect is modulated by the motivation of maintaining a positive moral self-image {[}{]}.
+
+It's less known, however, how the moral self-image related information is processed at the first lower cognitive stage, for example, in perceptual process where participant need to decide their priority of information processing who the information should be processed. Though rarely appeared in moral related studies, the role of perception in understanding our cognition had been long root in psychology, social psychology is not exceptional. In 1950s, Bruner (1957) had proposed the \enquote{New Look} approach of perception, which was resurrected by accumulating evidence (Stolier \& Freeman, 2016; Xiao, Coppin, \& Bavel, 2016). These studies supported the view that there is a bidirectional interplay between perception and higher-level cognition, such as stereotype (Stolier \& Freeman, 2016; Xiao et al., 2016), and self-relevance (Sui, He, \& Humphreys, 2012). Few studies also tested whether moral-laden information was prioritized in the perception (Anderson et al., 2011; Gantman \& Van Bavel, 2014). Still, the moral self-image information has rarely been studied (except Hu, Lan, Macrae, and Sui (2020))
+
+These observation supported the view that the motivation of maintaining a positive self-image, especially on the aspect that are crucial to oneself {[}{]}, can distort the cognitive processing {[}Greenwarld, 1988{]}. All the available model and evidence suggest that this positive self motivation also impact our perception processing.
+
+To test this hypothesis, we adopted a self-tagging paradigm.
+
+Outline:
+
+Perceptual decision-making is an important window for understanding the cognition (Shadlen \& Kiani, 2013), it's also has bi-directional interplay with higher-level cognition (Bruner, 1957; Gilbert \& Li, 2013). Recently, there are accumulating evidence that perception also has bidirectional interplay with social cognition, such as morality (Anderson et al., 2011; Gantman \& Van Bavel, 2014), stereotype (Stolier \& Freeman, 2016; Xiao et al., 2016), and self-relevance (Sui et al., 2012).
+
+One important feature of perception is the salience of the stimuli around us. Previous studies showed that emotional stimuli are salient and are prioritized. However, important modulate is whether the stimuli is self-relevant when they are physically and emotional equally salient.
 
 Here we investigated how the instantly learned moral valence changed the perceptual decision-making and the underlying psychological processes.
 
-Given the importance of morality in social life (DeScioli, 2016) and identity (Freitas, Cikara, Grossmann, \& Schlegel, 2017; Strohminger, Knobe, \& Newman, 2017; Zhang, Chen, Schlegel, Hicks, \& Chen, 2019), and evidence that moral character impacts how people evaluate themselves {[}XXXX{]}, desired personality change (Sun \& Goodwin, 2020), memory (Carlson, Maréchal, Oud, Fehr, \& Crockett, 2020; Kouchaki \& Gino, 2016; Shu, Gino, \& Bazerman, 2011; Stanley \& De Brigard, 2019), one would expect that moral character, the morality related trait, will also reflected in perceptual decision-making. Yet, this effect was less studied (Anderson et al., 2011; Gantman \& Van Bavel, 2014). This moral perception effect was driven by motivation (Gantman \& Van Bavel, 2016) and influenced the information spreading online (Brady, Gantman, \& Van Bavel, 2020). Especially lacking is the process of this effect.
+Given the importance of morality in social life (DeScioli, 2016) and identity (Freitas, Cikara, Grossmann, \& Schlegel, 2017; Strohminger, Knobe, \& Newman, 2017; Zhang, Chen, Schlegel, Hicks, \& Chen, 2019), and evidence that moral character impacts how people evaluate themselves {[}XXXX{]}, desired personality change (Sun \& Goodwin, 2020), memory (Carlson, Maréchal, Oud, Fehr, \& Crockett, 2020; Kouchaki \& Gino, 2016; Shu, Gino, \& Bazerman, 2011; Stanley \& De Brigard, 2019), one would expect that moral character, the morality related trait, will also reflected in perceptual decision-making. Yet, this effect was less studied . This moral perception effect was driven by motivation (Gantman \& Van Bavel, 2016) and influenced the information spreading online (Brady, Gantman, \& Van Bavel, 2020). Especially lacking is the process of this effect.
 
-The current study first explored and confirmed a positive effect of moral character in perceptual decision-making, using an associative learning task, then attempted to provide a mechanistic explanation for this positivity effect: spontaenous self-identification with the moral good character (Juechems and Summerfield (2019): Self-relevance is an important dimension in determine the value, i.e., intrinsic goal), both implicitly and explicitly. Finally, this positivity effect was also found in other social traits (beauty) but not non-social, emotional states.
+The current study first explored and confirmed a positive effect of moral character in perceptual decision-making, using an associative learning task, then attempted to provide a mechanistic explanation for this positivity effect: spontaneous self-identification with the moral good character (Juechems and Summerfield (2019): Self-relevance is an important dimension in determine the value, i.e., intrinsic goal), both implicitly and explicitly. Finally, this positivity effect was also found in other social traits (beauty) but not non-social, emotional states.
 
 Potential theoretical discussion points:
 Close distance of the semantic representation of self and moral character (attractor network) (Freeman \& Ambady, 2011).
 The core/true/authentic self concept.
+social meter theory of self-esteem.
+evolutionary perspective of morality and moral self-conception, moral identity.
 
 We reported behavioral results from eleven experiments. In first set of experiments, we found that shapes associated with morally positive person label were responded faster and more accurately. In the second set of experiments, we explore the potential role of good self in perceptual matching task and added one more independent variable, we found that the effect was mainly on good self. In the third part we tested whether the morality will automatically binds with self but not other. Finally, we explore the correlation between behavioral task and questionnaire scores.
 
@@ -172,7 +186,7 @@ We reported behavioral results from eleven experiments. In first set of experime
 
 We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy lower than 60\% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis.
 
-All the experiments reported were not pre-registered. Most experiments (1a \textasciitilde{} 6b, except experiment 3b) reported in the current study were first finished between 2014 to 2016 in Tsinghua University, Beijing, China. Participants in these experiments were recruited in the local community. To increase the sample size of experiments to 50 or more (Simmons, Nelson, \& Simonsohn, 2013), we recruited additional participants in Wenzhou University, Wenzhou, China in 2017 for experiment 1a, 1b, 4a, and 4b. Experiment 3b was finished in Wenzhou University in 2017. To have a better estimation of the effect size, we included the data from two experiments (experiment 7a, 7b) that were reported in Hu, Lan, Macrae, and Sui (2020) (See Table S1 for overview of these experiments).
+All the experiments reported were not pre-registered. Most experiments (1a \textasciitilde{} 6b, except experiment 3b) reported in the current study were first finished between 2014 to 2016 in Tsinghua University, Beijing, China. Participants in these experiments were recruited in the local community. To increase the sample size of experiments to 50 or more (Simmons, Nelson, \& Simonsohn, 2013), we recruited additional participants in Wenzhou University, Wenzhou, China in 2017 for experiment 1a, 1b, 4a, and 4b. Experiment 3b was finished in Wenzhou University in 2017. To have a better estimation of the effect size, we included the data from two experiments (experiment 7a, 7b) that were reported in Hu et al. (2020) (See Table S1 for overview of these experiments).
 
 All participant received informed consent and compensated for their time. These experiments were approved by the ethic board in the Department of Tsinghua University.
 
@@ -182,7 +196,7 @@ All participant received informed consent and compensated for their time. These 
 \hypertarget{design-and-procedure}{%
 \subsection{Design and Procedure}\label{design-and-procedure}}
 
-This series of experiments started to test the effect of instantly acquired true self (moral self) on perceptual decision-making. For this purpose, we used the social associative learning paradigm (or tagging paradigm)(Sui, He, \& Humphreys, 2012), in which participants first learned the associations between geometric shapes and labels of person with different moral character (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and label were counterbalanced across participants. After remembered the associations, participants finished a practice phase to familiar with the task, in which they viewed one of the shapes upon the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. When participants reached 60\% or higher accuracy at the end of the practicing session, they started the experimental task which was the same as in the practice phase.
+This series of experiments started to test the effect of instantly acquired true self (moral self) on perceptual decision-making. For this purpose, we used the social associative learning paradigm (or tagging paradigm)(Sui et al., 2012), in which participants first learned the associations between geometric shapes and labels of person with different moral character (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and label were counterbalanced across participants. After remembered the associations, participants finished a practice phase to familiar with the task, in which they viewed one of the shapes upon the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. When participants reached 60\% or higher accuracy at the end of the practicing session, they started the experimental task which was the same as in the practice phase.
 
 The experiment 1a, 1b, 1c, 2, and 6a shared a 2 (matching: match vs.~nonmatch) by 3 (moral valence: good vs.~neutral vs.~bad) within-subject design. Experiment 1a was the first one of the whole series studies and 1b, 1c, and 2 were conducted to exclude the potential confounding factors. More specifically, experiment 1b used different Chinese words as label to test whether the effect only occurred with certain familiar words. Experiment 1c manipulated the moral valence indirectly: participants first learned to associate different moral behaviors with different neutral names, after remembered the association, they then performed the perceptual matching task by associating names with different shapes. Experiment 2 further tested whether the way we presented the stimuli influence the effect of valence, by sequentially presenting labels and shapes. Note that part of participants of experiment 2 were from experiment 1a because we originally planned a cross task comparison. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment which aimed at exploring the neural correlates of the effect. But we will focus on the behavioral results of experiment 6a in the current manuscript.
 
@@ -1400,6 +1414,9 @@ Brady, W. J., Gantman, A. P., \& Van Bavel, J. J. (2020). Attentional capture he
 \leavevmode\hypertarget{ref-Brainard_1997}{}%
 Brainard, D. H. (1997). The psychophysics toolbox. \emph{Spatial Vision}, \emph{10}(4), 433--436. Journal Article.
 
+\leavevmode\hypertarget{ref-bruner_perceptual_1957}{}%
+Bruner, J. S. (1957). On perceptual readiness. \emph{Psychological Review}, \emph{64}(2), 123--152. \url{https://doi.org/10.1037/h0043805}
+
 \leavevmode\hypertarget{ref-Buxfcrkner_2017}{}%
 Bürkner, P.-C. (2017). Brms: An r package for bayesian multilevel models using stan. \emph{Journal of Statistical Software; Vol 1, Issue 1 (2017)}. Journal Article. Retrieved from \url{https://www.jstatsoft.org/v080/i01\%0Ahttp://dx.doi.org/10.18637/jss.v080.i01}
 
@@ -1412,11 +1429,23 @@ Cooper, H., Hedges, L. V., \& Valentine, J. C. (2009). \emph{The handbook of res
 \leavevmode\hypertarget{ref-DeCarlo_1998}{}%
 DeCarlo, L. T. (1998). Signal detection theory and generalized linear models. \emph{Psychological Methods}, \emph{3}(2), 186--205. Journal Article. \url{https://doi.org/10.1037/1082-989X.3.2.186}
 
+\leavevmode\hypertarget{ref-descioli_side-taking_2016}{}%
+DeScioli, P. (2016). The side-taking hypothesis for moral judgment. \emph{Current Opinion in Psychology}, \emph{7}, 23--27. \url{https://doi.org/10.1016/j.copsyc.2015.07.002}
+
 \leavevmode\hypertarget{ref-faul_statistical_2009}{}%
 Faul, F., Erdfelder, E., Buchner, A., \& Lang, A.-G. (2009). Statistical power analyses using g*Power 3.1: Tests for correlation and regression analyses. \emph{Behavior Research Methods}, \emph{41}(4), 1149--1160. \url{https://doi.org/10.3758/BRM.41.4.1149}
 
+\leavevmode\hypertarget{ref-freitas_origins_2017}{}%
+Freitas, J. D., Cikara, M., Grossmann, I., \& Schlegel, R. (2017). Origins of the belief in good true selves. \emph{Trends in Cognitive Sciences}, \emph{21}(9), 634--636. \url{https://doi.org/10.1016/j.tics.2017.05.009}
+
 \leavevmode\hypertarget{ref-gantman_moral_2014}{}%
 Gantman, A. P., \& Van Bavel, J. J. (2014). The moral pop-out effect: Enhanced perceptual awareness of morally relevant stimuli. \emph{Cognition}, \emph{132}(1), 22--29. \url{https://doi.org/10.1016/j.cognition.2014.02.007}
+
+\leavevmode\hypertarget{ref-gantman_exposure_2016}{}%
+Gantman, A. P., \& Van Bavel, J. J. (2016). Exposure to justice diminishes moral perception. \emph{Journal of Experimental Psychology: General}, \emph{145}(12), 1728--1739. \url{https://doi.org/10.1037/xge0000241}
+
+\leavevmode\hypertarget{ref-gilbert_top-down_2013}{}%
+Gilbert, C. D., \& Li, W. (2013). Top-down influences on visual processing. \emph{Nature Reviews Neuroscience}, \emph{14}(5), 350--363. \url{https://doi.org/10.1038/nrn3476}
 
 \leavevmode\hypertarget{ref-Goh_2016_mini}{}%
 Goh, J. X., Hall, J. A., \& Rosenthal, R. (2016). Mini meta-analysis of your own studies: Some arguments on why and a primer on how. \emph{Social and Personality Psychology Compass}, \emph{10}(10), 535--549. Journal Article. \url{https://doi.org/10.1111/spc3.12267}
@@ -1448,17 +1477,32 @@ Rouder, J. N., \& Lu, J. (2005). An introduction to bayesian hierarchical models
 \leavevmode\hypertarget{ref-Rousselet_2019}{}%
 Rousselet, G. A., \& Wilcox, R. R. (2019). Reaction times and other skewed distributions: Problems with the mean and the median. \emph{Meta-Psychology}. preprint. \url{https://doi.org/10.1101/383935}
 
+\leavevmode\hypertarget{ref-shadlen_decision_2013}{}%
+Shadlen, M. N., \& Kiani, R. (2013). Decision making as a window on cognition. \emph{Neuron}, \emph{80}(3), 791--806. \url{https://doi.org/10.1016/j.neuron.2013.10.047}
+
 \leavevmode\hypertarget{ref-Simmons_2013_life}{}%
 Simmons, J. P., Nelson, L. D., \& Simonsohn, U. (2013). Life after p-hacking. Conference Proceedings. \url{https://doi.org/10.2139/ssrn.2205186}
 
 \leavevmode\hypertarget{ref-Stanislaw_Todorov_1999}{}%
 Stanislaw, H., \& Todorov, N. (1999). Calculation of signal detection theory measures. \emph{Behavior Research Methods, Instruments, \& Computers}, \emph{31}(1), 137--149. Journal Article. \url{https://doi.org/10.3758/BF03207704}
 
+\leavevmode\hypertarget{ref-stolier_functional_2016}{}%
+Stolier, R. M., \& Freeman, J. B. (2016). Functional and temporal considerations for top-down influences in social perception. \emph{Psychological Inquiry}, \emph{27}(4), 352--357. \url{https://doi.org/10.1080/1047840X.2016.1216034}
+
+\leavevmode\hypertarget{ref-strohminger_true_2017}{}%
+Strohminger, N., Knobe, J., \& Newman, G. (2017). The true self: A psychological concept distinct from the self: \emph{Perspectives on Psychological Science}. \url{https://doi.org/10.1177/1745691616689495}
+
 \leavevmode\hypertarget{ref-Sui_2012_JEPHPP}{}%
 Sui, J., He, X., \& Humphreys, G. W. (2012). Perceptual effects of social salience: Evidence from self-prioritization effects on perceptual matching. \emph{Journal of Experimental Psychology: Human Perception and Performance}, \emph{38}(5), 1105--1117. Journal Article. \url{https://doi.org/10.1037/a0029792}
 
 \leavevmode\hypertarget{ref-wiecki_hddm_2013}{}%
 Wiecki, T. V., Sofer, I., \& Frank, M. J. (2013). HDDM: Hierarchical bayesian estimation of the drift-diffusion model in python. \emph{Frontiers in Neuroinformatics}, \emph{7}. \url{https://doi.org/10.3389/fninf.2013.00014}
+
+\leavevmode\hypertarget{ref-xiao_perceiving_2016}{}%
+Xiao, Y. J., Coppin, G., \& Bavel, J. J. V. (2016). Perceiving the world through group-colored glasses: A perceptual model of intergroup relations. \emph{Psychological Inquiry}, \emph{27}(4), 255--274. \url{https://doi.org/10.1080/1047840X.2016.1199221}
+
+\leavevmode\hypertarget{ref-zhang_authentic_2019}{}%
+Zhang, H., Chen, K., Schlegel, R., Hicks, J., \& Chen, C. (2019). The authentic moral self: Dynamic interplay between perceived authenticity and moral behaviors in the workplace. \emph{Collabra: Psychology}, \emph{5}(1), 48. \url{https://doi.org/10.1525/collabra.260}
 
 \endgroup
 
