--- a/endnote.bib
+++ b/endnote.bib
@@ -50,7 +50,6 @@ http://dx.doi.org/10.18637/jss.v088.i02},
    type = {Journal Article}
 }
 
-
 ﻿@article{Hu_2018_JASP,
    author = {Hu, Chuan-Peng and Kong, Xiang-Zhen and Wagenmakers, Eric-Jan and Ly, Alexander and Peng, Kaiping},
    title = {Bayes Factor and Its Implementation in JASP: A Practical Primer (in Chinese)},
@@ -459,9 +458,7 @@ Negative gossip about a person renders that person’s face more visible to the 
 	urldate = {2020-07-12},
 	date = {2011-06-17},
 	langid = {english},
-	pmid = {21596956},
-	note = {Publisher: American Association for the Advancement of Science
-Section: Report}
+	pmid = {21596956}
 }
 
 @article{gantman_moral_2014,
@@ -481,6 +478,19 @@ Section: Report}
 	date = {2014-07-01},
 	langid = {english},
 	keywords = {Ambiguity, Awareness, Morality, Perception, Vision}
+}
+
+@article{gantman_exposure_2016,
+	title = {Exposure to justice diminishes moral perception},
+	volume = {145},
+	issn = {1939-2222(Electronic),0096-3445(Print)},
+	doi = {10.1037/xge0000241},
+	pages = {1728--1739},
+	number = {12},
+	journaltitle = {Journal of Experimental Psychology: General},
+	author = {Gantman, Ana P. and Van Bavel, Jay J.},
+	date = {2016},
+	keywords = {Motivation, Morality, Vocabulary, Signal Detection (Perception), Justice}
 }
 
 @article{faul_statistical_2009,
@@ -531,8 +541,7 @@ Section: Report}
 	author = {Brady, William J. and Crockett, M. J. and Van Bavel, Jay J.},
 	urldate = {2020-09-07},
 	date = {2020-07-01},
-	langid = {english},
-	note = {Publisher: {SAGE} Publications Inc}
+	langid = {english}
 }
 
 @article{brady_attentional_2020,
@@ -546,10 +555,7 @@ Section: Report}
 	journaltitle = {Journal of Experimental Psychology: General},
 	author = {Brady, William J. and Gantman, Ana P. and Van Bavel, Jay J.},
 	date = {2020},
-	note = {Place: {US}
-Publisher: American Psychological Association},
-	keywords = {Attentional Capture, Discourse Analysis, Emotional Content, Morality, Online Social Networks, Physiological Arousal, Social Media, Test Construction, Visual Attention},
-	file = {Snapshot:/home/hcp4715/Zotero/storage/FPWUBMGN/2019-52292-001.html:text/html;BradyGantmanVanBavel-MoralContagionAttention-Preprint.docx:/home/hcp4715/Zotero/storage/ZU6AIAQG/BradyGantmanVanBavel-MoralContagionAttention-Preprint.docx:application/vnd.openxmlformats-officedocument.wordprocessingml.document}
+	keywords = {Attentional Capture, Discourse Analysis, Emotional Content, Morality, Online Social Networks, Physiological Arousal, Social Media, Test Construction, Visual Attention}
 }
 
 
@@ -570,4 +576,325 @@ Publisher: American Psychological Association},
 	langid = {english},
 	keywords = {goal-directed decision-making, homeostasis, medial prefrontal cortex, reinforcement learning, reward, value},
 	file = {ScienceDirect Snapshot:/home/hcp4715/Zotero/storage/DNLBLVY3/S1364661319302001.html:text/html}
+}
+
+@article{shadlen_decision_2013,
+	title = {Decision Making as a Window on Cognition},
+	volume = {80},
+	issn = {0896-6273},
+	url = {https://www.cell.com/neuron/abstract/S0896-6273(13)00999-9},
+	doi = {10.1016/j.neuron.2013.10.047},
+	pages = {791--806},
+	number = {3},
+	journaltitle = {Neuron},
+	shortjournal = {Neuron},
+	author = {Shadlen, Michael N. and Kiani, Roozbeh},
+	urldate = {2020-07-04},
+	date = {2013-10-30},
+	pmid = {24183028}
+}
+
+
+@article{stolier_functional_2016,
+	title = {Functional and Temporal Considerations for Top-Down Influences in Social Perception},
+	volume = {27},
+	issn = {1047-840X},
+	url = {https://doi.org/10.1080/1047840X.2016.1216034},
+	doi = {10.1080/1047840X.2016.1216034},
+	pages = {352--357},
+	number = {4},
+	journaltitle = {Psychological Inquiry},
+	author = {Stolier, Ryan M. and Freeman, Jonathan B.},
+	urldate = {2020-09-07},
+	date = {2016-10-01}
+}
+
+
+@article{xiao_perceiving_2016,
+	title = {Perceiving the World Through Group-Colored Glasses: A Perceptual Model of Intergroup Relations},
+	volume = {27},
+	issn = {1047-840X},
+	url = {https://doi.org/10.1080/1047840X.2016.1199221},
+	doi = {10.1080/1047840X.2016.1199221},
+	shorttitle = {Perceiving the World Through Group-Colored Glasses},
+	abstract = {Extensive research has investigated societal and behavioral consequences of social group affiliation and identification but has been relatively silent on the role of perception in intergroup relations. We propose the perceptual model of intergroup relations to conceptualize how intergroup relations are grounded in perception. We review the growing literature on how intergroup dynamics shape perception across different sensory modalities and argue that these perceptual processes mediate intergroup relations. The model provides a starting point for social psychologists to study perception as a function of social group dynamics and for perception researchers to consider social influences. We highlight several gaps in the literature and outline areas for future research. Uncovering the role of perception in intergroup relations offers novel insights into the construction of shared reality and may help devise new and unique interventions targeted at the perceptual level.},
+	pages = {255--274},
+	number = {4},
+	journaltitle = {Psychological Inquiry},
+	author = {Xiao, Y. Jenny and Coppin, Géraldine and Bavel, Jay J. Van},
+	urldate = {2020-09-07},
+	date = {2016-10-01}
+}
+
+@article{descioli_side-taking_2016,
+	title = {The side-taking hypothesis for moral judgment},
+	volume = {7},
+	issn = {2352-250X},
+	url = {http://www.sciencedirect.com/science/article/pii/S2352250X15001700},
+	doi = {10.1016/j.copsyc.2015.07.002},
+	series = {Evolutionary psychology},
+	abstract = {A recent theory proposes that moral judgment is an evolved strategy for choosing sides in conflicts. Evidence from moral psychology undermines previous evolutionary theories of morality focused on cooperation. I show how the side-taking hypothesis explains these otherwise puzzling patterns of moral judgment — especially its focus on actions rather than intended consequences. Moral judgment offers an alternative to choosing sides based on status or relationships by conditioning support on disputants’ actions rather than their identities. Observers can use moral judgment to take the same side, avoiding costly fights among themselves, while dynamically changing who they support in different conflicts. Observers can benefit from moral side-taking even when condemnation harms other individuals and society.},
+	pages = {23--27},
+	journaltitle = {Current Opinion in Psychology},
+	shortjournal = {Current Opinion in Psychology},
+	author = {{DeScioli}, Peter},
+	urldate = {2020-09-08},
+	date = {2016-02-01}
+}
+
+
+@article{freitas_origins_2017,
+	title = {Origins of the Belief in Good True Selves},
+	volume = {21},
+	issn = {1364-6613, 1879-307X},
+	url = {https://www.cell.com/trends/cognitive-sciences/abstract/S1364-6613(17)30110-9},
+	doi = {10.1016/j.tics.2017.05.009},
+	pages = {634--636},
+	number = {9},
+	journaltitle = {Trends in Cognitive Sciences},
+	shortjournal = {Trends in Cognitive Sciences},
+	author = {Freitas, Julian De and Cikara, Mina and Grossmann, Igor and Schlegel, Rebecca},
+	urldate = {2020-07-23},
+	date = {2017-09-01},
+	pmid = {28601535},
+	keywords = {self, true self, psychological essentialism}
+}
+
+
+@article{strohminger_true_2017,
+	title = {The True Self: A Psychological Concept Distinct From the Self:},
+	rights = {© The Author(s) 2017},
+	url = {https://journals.sagepub.com/doi/10.1177/1745691616689495},
+	doi = {10.1177/1745691616689495},
+	shorttitle = {The True Self},
+	abstract = {A long tradition of psychological research has explored the distinction between characteristics that are part of the self and those that lie outside of it. Rece...},
+	journaltitle = {Perspectives on Psychological Science},
+	author = {Strohminger, Nina and Knobe, Joshua and Newman, George},
+	urldate = {2020-07-23},
+	date = {2017-07-03}
+}
+
+
+@article{zhang_authentic_2019,
+	title = {The Authentic Moral Self: Dynamic Interplay between Perceived Authenticity and Moral Behaviors in the Workplace},
+	volume = {5},
+	issn = {2474-7394},
+	url = {http://www.collabra.org/articles/10.1525/collabra.260/},
+	doi = {10.1525/collabra.260},
+	shorttitle = {The Authentic Moral Self},
+	abstract = {Article: The Authentic Moral Self: Dynamic Interplay between Perceived Authenticity and Moral Behaviors in the Workplace},
+	pages = {48},
+	number = {1},
+	journaltitle = {Collabra: Psychology},
+	author = {Zhang, Hong and Chen, Kaiyuan and Schlegel, Rebecca and Hicks, Joshua and Chen, Changkai},
+	urldate = {2020-07-23},
+	date = {2019-10-17}
+}
+
+
+@article{gilbert_top-down_2013,
+	title = {Top-down influences on visual processing},
+	volume = {14},
+	rights = {2013 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+	issn = {1471-0048},
+	url = {https://www.nature.com/articles/nrn3476},
+	doi = {10.1038/nrn3476},
+	pages = {350--363},
+	number = {5},
+	journaltitle = {Nature Reviews Neuroscience},
+	author = {Gilbert, Charles D. and Li, Wu},
+	urldate = {2020-09-20},
+	date = {2013-05},
+	langid = {english}
+}
+
+
+@article{bruner_perceptual_1957,
+	title = {On perceptual readiness},
+	volume = {64},
+	issn = {1939-1471(Electronic),0033-295X(Print)},
+	doi = {10.1037/h0043805},
+	abstract = {Readiness depends on how accessible categories are to the stimulated organism. Accessibility is a function of the likehood of occurrence of previously learned events, and one's need states and habits of daily living. Lack of perceptual readiness can be rectified by relearning the categories, or by constant close inspection of events and objects. Sensory stimuli are "sorted" to appropriate categories by searching for and using cues. 4 mechanisms are proposed: "grouping and integration, access ordering, match-mismatch signal utilization, and gating." Failure of perceptual readiness may occur because of inability to learn appropriate categories or through interference of accessible categories. These ideas may shed light on "perceptual defense." 88 references. ({PsycINFO} Database Record (c) 2016 {APA}, all rights reserved)},
+	pages = {123--152},
+	number = {2},
+	journaltitle = {Psychological Review},
+	author = {Bruner, Jerome S.},
+	date = {1957},
+	keywords = {Activities of Daily Living, Cognitive Ability, Defense Mechanisms}
+}
+
+
+@article{freeman_dynamic_2011,
+	title = {A dynamic interactive theory of person construal.},
+	volume = {118},
+	issn = {1939-1471, 0033-295X},
+	url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/a0022327},
+	doi = {10.1037/a0022327},
+	abstract = {A dynamic interactive theory of person construal is proposed. It assumes that the perception of other people is accomplished by a dynamical system involving continuous interaction between social categories, stereotypes, high-level cognitive states, and the low-level processing of facial, vocal, and bodily cues. This system permits lower-level sensory perception and higher-order social cognition to dynamically coordinate across multiple interactive levels of processing to give rise to stable person construals. A recurrent connectionist model of this system is described, which accounts for major findings on (a) partial parallel activation and dynamic competition in categorization and stereotyping, (b) top-down influences of high-level cognitive states and stereotype activations on categorization, (c) bottom-up category interactions due to shared perceptual features, and (d) contextual and cross-modal effects on categorization. The system’s probabilistic and continuously evolving activation states permit multiple construals to be flexibly active in parallel. These activation states are also able to be tightly yoked to ongoing changes in external perceptual cues and to ongoing changes in high-level cognitive states. The implications of a rapidly adaptive, dynamic, and interactive person construal system are discussed.},
+	pages = {247--279},
+	number = {2},
+	journaltitle = {Psychological Review},
+	shortjournal = {Psychological Review},
+	author = {Freeman, Jonathan B. and Ambady, Nalini},
+	urldate = {2020-09-09},
+	date = {2011},
+	langid = {english}
+}
+
+@article{amodio_social_2019,
+	title = {Social Cognition 2.0: An Interactive Memory Systems Account},
+	volume = {23},
+	issn = {1364-6613, 1879-307X},
+	url = {https://www.cell.com/trends/cognitive-sciences/abstract/S1364-6613(18)30235-3},
+	doi = {10.1016/j.tics.2018.10.002},
+	shorttitle = {Social Cognition 2.0},
+	pages = {21--33},
+	number = {1},
+	journaltitle = {Trends in Cognitive Sciences},
+	shortjournal = {Trends in Cognitive Sciences},
+	author = {Amodio, David M.},
+	urldate = {2020-07-20},
+	date = {2019-01-01},
+	pmid = {30466793},
+	note = {Publisher: Elsevier},
+	keywords = {memory, learning, social cognition, attitudes, implicit, neuroscience}
+}
+
+
+@article{verosky_differential_2010,
+	title = {Differential neural responses to faces physically similar to the self as a function of their valence},
+	volume = {49},
+	issn = {1053-8119},
+	url = {http://www.sciencedirect.com/science/article/pii/S105381190901088X},
+	doi = {10.1016/j.neuroimage.2009.10.017},
+	abstract = {Behavioral studies show that people self-enhance across a number of domains, including self-face recognition. We used functional magnetic resonance imaging ({fMRI}) to investigate whether response to physical similarity to the self would differ depending on whether the self-face was morphed with a positive (trustworthy) or negative (untrustworthy) novel face. Participants were presented with morphs of their faces (20\%, 40\%, 50\%, 60\%, and 80\% self) and asked to decide whether the morph looked like them or the other face. Participants were more likely to identify the trustworthy than the untrustworthy morphs as looking like the self. Moreover, there were large differences in brain activation to trustworthy and untrustworthy morphs. As similarity of the untrustworthy morphs to the self decreased, the response in a number of regions, including bilateral posterior superior temporal sulcus/inferior parietal lobule, right inferior frontal gyrus, and bilateral middle/inferior temporal gyrus, increased. In contrast, there was little evidence for changes in activation as a function of the similarity to trustworthy faces. That is, these regions seemed to differentiate between the self and untrustworthy faces to a much greater extent than between the self and trustworthy faces, despite the fact that the task did not demand evaluation of the faces. The findings suggest that comparing the self to others who are viewed as positive versus negative triggers different psychological processes.},
+	pages = {1690--1698},
+	number = {2},
+	journaltitle = {{NeuroImage}},
+	shortjournal = {{NeuroImage}},
+	author = {Verosky, Sara C. and Todorov, Alexander},
+	urldate = {2020-09-29},
+	date = {2010-01-15},
+	langid = {english}
+}
+
+
+@article{goodwin_moral_2014,
+	title = {Moral character predominates in person perception and evaluation},
+	volume = {106},
+	issn = {1939-1315},
+	doi = {10.1037/a0034726},
+	abstract = {What sorts of trait information do people most care about when forming impressions of others? Recent research in social cognition suggests that "warmth," broadly construed, should be of prime importance in impression formation. Yet, some prior research suggests that information about others' specifically moral traits--their moral "character"--may be a primary dimension. Although warmth and character have sometimes been conceived of as interchangeable, we argue that they are separable, and that across a wide variety of contexts, character is usually more important than warmth in impression formation. We first showed that moral character and social warmth traits are indeed separable (Studies 1 and 2). Further studies that used correlational and experimental methods showed that, as predicted, in most contexts, moral character information is more important in impression formation than is warmth information (Studies 2-6). Character information was also more important than warmth information with respect to judgments of traits' perceived fundamentalness to identity, their uniquely human quality, their context-independence, and their controllability (Study 2). Finally, Study 7 used an archival method to show that moral character information appears more prominently than warmth information in obituaries, and more strongly determines the impressions people form of the individuals described in those obituaries. We discuss implications for current theories of person perception and social cognition.},
+	pages = {148--168},
+	number = {1},
+	journaltitle = {Journal of Personality and Social Psychology},
+	shortjournal = {J Pers Soc Psychol},
+	author = {Goodwin, Geoffrey P. and Piazza, Jared and Rozin, Paul},
+	date = {2014-01},
+	pmid = {24274087},
+	keywords = {Adult, Character, Female, Humans, Interpersonal Relations, Male, Middle Aged, Morals, Social Perception, Young Adult}
+}
+
+@article{goodwin_moral_2015,
+	title = {Moral Character in Person Perception},
+	volume = {24},
+	issn = {0963-7214},
+	url = {https://doi.org/10.1177/0963721414550709},
+	doi = {10.1177/0963721414550709},
+	abstract = {Understanding how people form impressions of others is a key goal of social cognition research. Past theories have posited that two fundamental dimensions—warmth and competence—underlie impression formation. However, these models conflate morality with warmth and fail to capture the full role that moral character plays in impression formation. An emerging perspective separates moral character (or morality) from warmth on both theoretical and empirical grounds. When morality is pitted against warmth, morality is clearly a more important driver of impression formation, as revealed by correlational, experimental, and archival studies. Yet social warmth remains important and conveys distinct information that morality does not. Alongside competence, both factors matter not only for person perception but also for other aspects of social cognition, including group perception. Important unanswered questions remain regarding the perceived structure of moral character and the way it is appraised in everyday life.},
+	pages = {38--44},
+	number = {1},
+	journaltitle = {Current Directions in Psychological Science},
+	shortjournal = {Curr Dir Psychol Sci},
+	author = {Goodwin, Geoffrey P.},
+	urldate = {2020-09-29},
+	date = {2015-02-01},
+	langid = {english}
+}
+
+
+@article{tappin_illusion_2017,
+	title = {The Illusion of Moral Superiority},
+	volume = {8},
+	issn = {1948-5506},
+	url = {https://doi.org/10.1177/1948550616673878},
+	doi = {10.1177/1948550616673878},
+	abstract = {Most people strongly believe they are just, virtuous, and moral; yet regard the average person as distinctly less so. This invites accusations of irrationality in moral judgment and perception—but direct evidence of irrationality is absent. Here, we quantify this irrationality and compare it against the irrationality in other domains of positive self-evaluation. Participants (N = 270) judged themselves and the average person on traits reflecting the core dimensions of social perception: morality, agency, and sociability. Adapting new methods, we reveal that virtually all individuals irrationally inflated their moral qualities, and the absolute and relative magnitude of this irrationality was greater than that in the other domains of positive self-evaluation. Inconsistent with prevailing theories of overly positive self-belief, irrational moral superiority was not associated with self-esteem. Taken together, these findings suggest that moral superiority is a uniquely strong and prevalent form of “positive illusion,” but the underlying function remains unknown.},
+	pages = {623--631},
+	number = {6},
+	journaltitle = {Social Psychological and Personality Science},
+	shortjournal = {Social Psychological and Personality Science},
+	author = {Tappin, Ben M. and {McKay}, Ryan T.},
+	urldate = {2020-09-29},
+	date = {2017-08-01},
+	langid = {english},
+	note = {Publisher: {SAGE} Publications Inc},
+	file = {SAGE PDF Full Text:/home/hcp4715/Zotero/storage/KWWICJ8L/Tappin and McKay - 2017 - The Illusion of Moral Superiority.pdf:application/pdf}
+}
+
+@article{abele_navigating_2020,
+	title = {Navigating the social world: Toward an integrated framework for evaluating self, individuals, and groups},
+	issn = {1939-1471(Electronic),0033-295X(Print)},
+	doi = {10.1037/rev0000262},
+	shorttitle = {Navigating the social world},
+	abstract = {Social evaluation occurs at personal, interpersonal, group, and intergroup levels, with competing theories and evidence. Five models engage in adversarial collaboration, to identify common conceptual ground, ongoing controversies, and continuing agendas: Dual Perspective Model (Abele \& Wojciszke, 2007); Behavioral Regulation Model (Leach, Ellemers, \& Barreto, 2007); Dimensional Compensation Model (Yzerbyt et al., 2005); Stereotype Content Model (Fiske, Cuddy, Glick, \& Xu, 2002); and Agency-Beliefs-Communion Model (Koch, Imhoff, Dotsch, Unkelbach, \& Alves, 2016). Each has distinctive focus, theoretical roots, premises, and evidence. Controversies dispute dimensions: number, organization, definition, and labeling; their relative priority; and their relationship. Our first integration suggests 2 fundamental dimensions: Vertical (agency, competence, “getting ahead”) and Horizontal (communion, warmth, “getting along”), with respective facets of ability and assertiveness (Vertical) and friendliness and morality (Horizontal). Depending on context, a third dimension is conservative versus progressive Beliefs. Second, different criteria for priority favor different dimensions: processing speed and subjective weight (Horizontal); pragmatic diagnosticity (Vertical); moderators include number and type of target, target-perceiver relationship, context. Finally, the relation between dimensions has similar operational moderators. As an integrative framework, the dimensions’ dynamics also depend on perceiver goals (comprehension, efficiency, harmony, compatibility), each balancing top-down and bottom-up processes, for epistemic or hedonic functions. One emerging insight is that the nature and number of targets each of these models typically examines alters perceivers’ evaluative goal and how bottom-up information or top-down inferences interact. This framework benefits theoretical parsimony and new research. ({PsycInfo} Database Record (c) 2020 {APA}, all rights reserved)},
+	journaltitle = {Psychological Review},
+	author = {Abele, Andrea E. and Ellemers, Naomi and Fiske, Susan T. and Koch, Alex and Yzerbyt, Vincent},
+	date = {2020}
+}
+
+
+@article{dzhelyova_temporal_2012,
+	title = {Temporal dynamics of trustworthiness perception},
+	volume = {1435},
+	issn = {0006-8993},
+	url = {http://www.sciencedirect.com/science/article/pii/S0006899311021317},
+	doi = {10.1016/j.brainres.2011.11.043},
+	abstract = {Behavioral and neuroimaging studies suggest that the attribution of trustworthiness to faces relies on emotional and structural cues. Attributions happen spontaneously and very rapidly but the precise temporal dynamics of the underlying processes are not known. We investigated the temporal dynamics of trustworthiness perception by employing scalp recorded event related potentials and evaluating effects on components previously implicated in face processing: P1 (positive component {\textasciitilde}100ms post-stimulus), N170 (negative deflection sensitive to faces) and a posterior-occipital negativity{\textasciitilde}230 to 280ms (early posterior negativity—{EPN}). Participants judged the gender and trustworthiness of female and male images manipulated to look either more or less trustworthy. The results indicated that facilitated behavioral processing of socially important stimuli—in particular males that looked untrustworthy (and should be avoided) but also females that looked trustworthy (and who might therefore be useful in cooperative ventures)—was reflected in an increased negativity of N170 amplitude over the right hemisphere. Additionally, trustworthiness continued to modulate the amplitude of the negative deflection{\textasciitilde}230 to 280ms post-stimulus during explicit judgments of trustworthiness but not during gender judgments. The results suggest that negativity accompanies the relevance of the faces (female trustworthy and male untrustworthy) that are important to remember for future social interactions.},
+	pages = {81--90},
+	journaltitle = {Brain Research},
+	shortjournal = {Brain Research},
+	author = {Dzhelyova, Milena and Perrett, David I. and Jentzsch, Ines},
+	urldate = {2020-09-29},
+	date = {2012-01-30},
+	langid = {english},
+	keywords = {N170, P1, Posterior-occipital negativity, Trustworthiness perception},
+	file = {ScienceDirect Snapshot:/home/hcp4715/Zotero/storage/2AA2GAB7/S0006899311021317.html:text/html}
+}
+
+@article{stanley_moral_2019,
+	title = {Moral Memories and the Belief in the Good Self},
+	volume = {28},
+	issn = {0963-7214},
+	url = {https://doi.org/10.1177/0963721419847990},
+	doi = {10.1177/0963721419847990},
+	abstract = {Most people believe they are morally good, and this belief plays an integral role in constructions of personal identity. Yet people commit moral transgressions with surprising frequency in everyday life. In this article, we characterize two mechanisms involving autobiographical memory that are utilized to foster a belief in a morally good self in the present—despite frequent and repeated immoral behavior. First, there is a tendency for people to willfully and actively forget details about their own moral transgressions but not about their own morally praiseworthy deeds. Second, when past moral transgressions are not forgotten, people strategically compare their more recent unethical behaviors with their more distant unethical behaviors to foster a perception of personal moral improvement over time. This, in turn, helps to portray the current self favorably. These two complementary mechanisms help to explain pervasive inconsistencies between people’s personal beliefs about their own moral goodness and the frequency with which they behave immorally.},
+	pages = {387--391},
+	number = {4},
+	journaltitle = {Current Directions in Psychological Science},
+	shortjournal = {Curr Dir Psychol Sci},
+	author = {Stanley, Matthew L. and De Brigard, Felipe},
+	urldate = {2020-07-23},
+	date = {2019-08-01},
+	langid = {english}
+}
+
+@article{carlson_motivated_2020,
+	title = {Motivated misremembering of selfish decisions},
+	volume = {11},
+	rights = {2020 The Author(s)},
+	issn = {2041-1723},
+	url = {https://www.nature.com/articles/s41467-020-15602-4},
+	doi = {10.1038/s41467-020-15602-4},
+	abstract = {People often prioritize their own interests, but also like to see themselves as moral. How do individuals resolve this tension? One way to both pursue personal gain and preserve a moral self-image is to misremember the extent of one’s selfishness. Here, we test this possibility. Across five experiments (N = 3190), we find that people tend to recall being more generous in the past than they actually were, even when they are incentivized to recall their decisions accurately. Crucially, this motivated misremembering effect occurs chiefly for individuals whose choices violate their own fairness standards, irrespective of how high or low those standards are. Moreover, this effect disappears under conditions where people no longer perceive themselves as responsible for their fairness violations. Together, these findings suggest that when people’s actions fall short of their personal standards, they may misremember the extent of their selfishness, thereby potentially warding off threats to their moral self-image.},
+	pages = {2100},
+	number = {1},
+	journaltitle = {Nature Communications},
+	author = {Carlson, Ryan W. and Maréchal, Michel André and Oud, Bastiaan and Fehr, Ernst and Crockett, Molly J.},
+	urldate = {2020-07-21},
+	date = {2020-04-29},
+	langid = {english},
+	note = {Number: 1
+Publisher: Nature Publishing Group},
+	file = {Full Text:/home/hcp4715/Zotero/storage/FSCZF7ZL/Carlson et al. - 2020 - Motivated misremembering of selfish decisions.pdf:application/pdf}
 }
